<resources>
    <string name="app_name"> La Bela</string>
    <string name="new_game">Igraj</string>
    <string name="rules">Pravila igre</string>
    <string name="exit_game">Izađi</string>
    <string name="WE_text">MI</string>
    <string name="WE_text_score">MI:</string>
    <string name="YOU_text_score">VI:</string>
    <string name="YOU_text">VI</string>
    <string name="zero">0</string>
    <string name="addResult">DODAJ REZULTAT</string>
    <string name="goBack">POVRATAK</string>
    <string name="removeLast">OBRIŠI ZADNJI</string>
    <string name="notFinished">Imate jednu ne završenu igru:</string>
    <string name="or">ILI</string>
    <string name="startNewGame">Započnite novu igru!</string>
    <string name="playingUpTo">Započni igru do:</string>
    <string name="number1001">1001</string>
    <string name="number701">701</string>
    <string name="number501">501</string>
    <string name="enterResult">Unesi rezultat</string>
    <string name="twenty">20</string>
    <string name="forty">40</string>
    <string name="fifty">50</string>
    <string name="eighty">80</string>
    <string name="ninety">90</string>
    <string name="hundred">100</string>
    <string name="hundredAndFifty">150</string>
    <string name="twoHundred">200</string>
    <string name="done">UREDU</string>
    <string name="WhoCalled">Tko je zvao?</string>
    <string name="WinnerIs">Pobjednik je:</string>
    <string name="winner">pobjednik</string>
</resources>