<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/background"
    tools:context=".GameSelectorActivity">

    <RelativeLayout
        android:id="@+id/rlLastGame"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/notFinished"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tvMi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/WE_text_score"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSumPointsWe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/scoreColor"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="50dp"
            android:text="@string/YOU_text_score"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSumPointsThem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/scoreColor"
            android:textSize="30sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/or"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startNewGame"
        android:textColor="@color/scoreColor"
        android:textSize="30sp"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:id="@+id/textViewLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="100dp"
        android:layout_toStartOf="@+id/radioButtonsLayout">

        <TextView
            android:id="@+id/playingToTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playingUpTo"
            android:textColor="@color/textColor"
            android:textSize="25sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/radioButtonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton1001"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/number1001"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton701"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/number701"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton501"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/number501"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>

</RelativeLayout>