<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartingPageActivity"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="307dp"
            android:layout_height="419dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/la_bela_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newGame_and_rules_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exit_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/RulesButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginRight="25dp"
            android:text="@string/rules"/>

        <Button
            android:id="@+id/NewGameButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:text="@string/new_game"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/ExitButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/exit_game"/>
    </LinearLayout>


</RelativeLayout>